deployment/kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proshop-frontend-deployment
  namespace: dev-01
spec:
  selector:
    matchLabels:
      app: proshop-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: proshop-frontend
    spec:
      containers:
        - name: proshop-frontend
          image: yinglu91/proshop-frontend:1.0
          ports:
            - containerPort: 80
