deployment/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proshop-frontend-srv
  namespace: dev-01
  labels:
    name: proshop-frontend
spec:
  type: NodePort
  ports:
    - name: proshop-frontend
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
  selector:
    app: proshop-frontend
# website:  http://localhost:30007/
