deployment/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: dev-01
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: proshop-frontend.local
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: proshop-frontend-srv
              servicePort: 3000
